# bob.pad.base

./: .gitignore  MANIFEST.in  README.rst  buildout.cfg  develop.cfg  pyproject.toml  requirements.txt  setup.py  test-requirements.txt  version.txt
bob/pad/base/: __init__.py
bob/pad/base/algorithm/: Algorithm.py  MLP.py  OneClassGMM.py  OneClassGMM2.py  OneClassGMM3.py  PadLDA.py  SVM.py  ScikitClassifier.py  ScikitWrapper.py  __init__.py
bob/pad/base/database/: DatabaseBobSpoof.py  PadBioFileDB.py  __init__.py  csv_dataset.py  database.py  file.py
bob/pad/base/database/filelist/: query.py
bob/pad/base/evaluation/: PadIsoMetrics.py  __init__.py
bob/pad/base/pipelines/: abstract_classes.py
bob/pad/base/pipelines/vanilla_pad/: __init__.py  abstract_classes.py  implemented.py  legacy.py
bob/pad/base/script/: cross.py  det.py  epc.py  error_utils.py  evaluate.py  figure.py  finalize_scores.py  fmr_iapmr.py  gen.py  histograms.py  metrics.py  pad.py  pad_commands.py  pad_figure.py  run_pipeline.py  vanilla_pad.py  vuln.py  vuln_commands.py  vuln_figure.py
bob/pad/base/test/: test_PadIsoMetrics.py  test_algorithms.py  test_commands.py  test_databases.py  test_error_utils.py  test_filelist.py  test_pipelines.py  test_spoof.py
bob/pad/base/test/data/: pad_devel_replaymobile_IqmScores_SVM.hdf5  pad_test_replaymobile_IqmScores_SVM.hdf5
bob/pad/base/test/data/per_pai_scores/: scores-dev-0.hdf5  scores-dev-1.hdf5  scores-dev.csv
bob/pad/base/test/dummy/: __init__.py  database.py  database_sql.py  preprocessor.py
bob/pad/base/tools/: FileSelector.py  algorithm.py  command_line.py  extractor.py  preprocessor.py  scoring.py
bob/pad/base/utils/: helper_functions.py
conda/: meta.yaml
doc/: catalog.json  conf.py  experiments.rst  extra-intersphinx.txt  features.rst  generic_intro.rst  implementation.rst  implemented.rst  index.rst  installation.rst  intro.rst  legacy.rst  links.rst  nitpick-exceptions.txt  pad_intro.rst  py_api.rst  vanilla_pad_features.rst  vanilla_pad_intro.rst
doc/img/: pipeline.odg  pipeline_with_eval.odg  vanilla_pad_pipeline.odg
src/bob/pad/base/: __init__.py
src/bob/pad/base/database/: csv_dataset.py
src/bob/pad/base/script/: cross.py  finalize_scores.py  pad.py  pad_commands.py  run_pipeline.py
tests/: test_commands.py  test_pipelines.py
tests/data/per_pai_scores/: scores-dev
